--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
+    "bootstrap": "^3.3.6",
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.0",
     "extract-text-webpack-plugin": "^1.0.1",
